--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li><a href="/california dairy producers">california dairy producers</a></li>
 <li><a href="/california factory farms">california factory farms</a></li>
  <li><a href="/compassion chase">compassion chase</a></li>
- <li><a href="/livestock + poultry models & talent">">/livestock + poultry models & talent"></a></li>
+ <li><a href="/models and talent">models and talent"></a></li>
  <li><a href="ethics">ethics</a></li>
 
 <li><a href="animal rights allies">animal rights allies</a></li>
@@ -25,7 +25,7 @@
 "Help me out of here and I'll show you what I can do."
 "Monkey see, monkey do."</h3>
 <p>~Sebastian, <em>The Brave Little Toaster</em>
-<a href="/the hidden life of animals">To read about more symbolism, themes, and wise words from exxamples such as The Brave Little Toaster, click here...</a></p>
+<a href="/the hidden life of animals">To read about more symbolism, themes, and wise words from examples such as The Brave Little Toaster, click here...</a></p>
 </div><!-- /.blurb -->
 </div><!-- /.container -->
 <footer>
