--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li><a href="/california dairy producers">california dairy producers</a></li>
 <li><a href="/california factory farms">california factory farms</a></li>
  <li><a href="/compassion chase">compassion chase</a></li>
- <li><a href="/models and talent">models and talent"></a></li>
+ <li><a href="/models and talent">models and talent</a></li>
  <li><a href="ethics">ethics</a></li>
 
 <li><a href="animal rights allies">animal rights allies</a></li>
