--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href="/">home</a></li>
 <li><a href="/the hidden life of animals">the hidden life of animals</a></li>
 <li><a href="/california dairy producers">california dairy producers</a></li>
 <li><a href="/california factory farms">california factory farms</a></li>
