--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 "Help me out of here and I'll show you what I can do."
 "Monkey see, monkey do."</h3>
 <p>~Sebastian, <em>The Brave Little Toaster</em>
-<a href="/the hidden life of animals">To read about more symbolism, themes, and wise words from examples such as The Brave Little Toaster, click here...</a></p>
+<br><br><a href="/the hidden life of animals">To read about more symbolism, themes, and wise words from examples such as The Brave Little Toaster, click here...</a></p>
 </div><!-- /.blurb -->
 </div><!-- /.container -->
 <footer>
