--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Mad C0wz Media</title>
+ <meta name="p:domain_verify" content="22f275290b22456baa570b7a05b8c25c"/>
+ <meta name="p:domain_verify" content="c214aef160d646fdbb10793858f93387"/>
 <!-- link to main stylesheet -->
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
